# launcher

./: CMakeLists.txt  Launcher.vcxproj  Launcher.vcxproj.filters  README.md
.github/workflows/: main.yml
resources/: resource.h  resource.rc
src/: App.cpp  App.h  KeyboardHook.cpp  KeyboardHook.h  ProgramIndexer.cpp  ProgramIndexer.h  SearchEngine.cpp  SearchEngine.h  Settings.cpp  Settings.h  TrayIcon.cpp  TrayIcon.h  Utils.cpp  Utils.h  Window.cpp  Window.h  main.cpp
